# stellarcontract

./: .env  .gitignore  README.md  environments.toml  package-lock.json  package.json  tsconfig.app.json
.stellar/contract-ids/: fungible_token_interface_example.json  nft_enumerable_example.json  quiz.json  stellar_hello_world_contract.json
.stellar/identity/: me.toml  (+1 more)
contracts/quiz/: Cargo.toml  README.md
contracts/quiz/src/: contract.rs  lib.rs
contracts/quiz/test_snapshots/: add_invalid_token_fails.1.json  atomic_update_rolls_back_on_error.1.json  join_insufficient_balance.1.json  paused_blocks_join_and_end.1.json  rounding_remainder_goes_to_charity.1.json  test_asset_room_creation.1.json  test_basic_initialization.1.json  test_cannot_initialize_twice.1.json  test_contract_initialization.1.json  test_debug_admin_roles.1.json  test_edge_cases.1.json  test_emergency_controls.1.json  test_emergency_controls_basic.1.json  test_extreme_edge_cases.1.json  test_financial_calculations.1.json  test_manual_token_approval.1.json  test_player_joining.1.json  test_player_joining_validation.1.json  test_pool_room_creation.1.json  test_pool_room_creation_validation.1.json  test_room_completion_by_screen_names.1.json  test_room_completion_validation.1.json  test_room_completion_with_winners.1.json  test_simple_room_creation_with_manual_token.1.json  test_token_management.1.json  token_disable_blocks_new_rooms.1.json
contracts/quiz/test_snapshots/test/: player_joining.json  room_creation.json
contracts/quiz/tests/: lib.rs  minimal.rs  run_tests.sh  simple.rs  working_test.rs
(+4 files in other folders)
